--- a/src/App.css
+++ b/src/App.css
@@ -184,10 +184,11 @@ label {
   }
   .input-group {
     width:90%;
+    align-items: center;
   }
   .main-title {
     width:100%;
-    text-align: left;
+    text-align: center;
     padding:0;
   }
   .main-input, button, .group {
